<resources>
    <string name="app_name">Note App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thang Nguyen</string>
    <string name="nav_header_subtitle">thang.120598@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_note_list">Note List</string>
    <string name="menu_task_list">Task List</string>
    <string name="menu_todo_list">Todo List</string>
    <string name="menu_tag">Tag</string>
    <string name="menu_home">Home</string>
    <string name="key_No_Data">No Data</string>

    <string name="todo_hint">What will you do?</string>
    <string name="note_hint">Write something!!!</string>
    <string name="tag_hint">Add more tags!!!</string>
    <string name="task_hint">Your planning!!!</string>
    <string name="key_Title">Title</string>
    <string name="key_Prioritize">Prioritize :</string>
    <string name="key_works">"Works : "</string>
    <string name="key_Description">Description</string>
    <string name="key_Save">Save</string>
    <string name="key_Clear">Clear</string>
    <string name="title_activity_task">TaskActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="key_Infomation_Task">Infomation</string>
    <string name="key_percent">%</string>
    <string name="key_works1">Works</string>
    <string name="key_update">Update</string>
    <string name="key_name_wolk">Name Work</string>
    <string name="key_Delete">Delete</string>
    <string name="key_mess_delete">Do you really want to delete?</string>
    <string name="key_Name">Name: </string>
    <string name="key_time_start">"Start Date: "</string>
    <string name="key_title_delete">Do you really want to delete?</string>
    <string name="key_tag_work">Work</string>
    <string name="key_tag_family">Family</string>
    <string name="key_tag_other">Other</string>
    <string name="key_set_tag">Set Tag</string>
    key_Prioritize
</resources>