<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_note_list"
            android:icon="@drawable/ic_baseline_note"
            android:title="@string/menu_note_list" />
        <item
            android:id="@+id/nav_task_list"
            android:icon="@drawable/ic_baseline_task_list"
            android:title="@string/menu_task_list" />
        <item
            android:id="@+id/nav_todo_list"
            android:icon="@drawable/ic_baseline_todo"
            android:title="@string/menu_todo_list" />
        <item
            android:id="@+id/nav_tag"
            android:icon="@drawable/ic_baseline_tag"
            android:title="@string/menu_tag" />
    </group>

</menu>