<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_Name"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/_14sdp" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_time_start"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/_14sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/img_calendar"
            android:src="@drawable/ic_baseline_calendar_today_24"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_30sdp"/>

        <TextView
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/edt_start_date"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="@dimen/_30sdp"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/key_Save"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/key_Clear"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>